# MachineLearning

Medium/TensorFlowInGo/: .gitignore  README.md  go.mod  go.sum  go.work  hello_tf  main.go
ardanlabs/ExploringVectorDatabases/: .gitignore
udemy/GCML-with-TensorFlow/: Notes.md
udemy/LlamaIndex/: README.md
udemy/MLflow/: README.md
udemy/MLflow/mlflow/: kind.sh  kind2.sh
udemy/MasterVectorDatabases/: .gitignore  README.md  SQLite_VSS.ipynb  docker-compose.yml  go.work  go.work.sum  milvus.yaml
udemy/MasterVectorDatabases/go-example/: azure.go  go.mod  go.sum  main.go  sqlite-database.sqlite3  sqlite.go  vector.sqlite3  vector2.sqlite3
udemy/MasterVectorDatabases/go-example-01/: azure.go  go.mod  go.sum  main.go  sqlite.go  vector0.dylib  vector2.sqlite3
udemy/MasterVectorDatabases/go-example-02/: go.mod  go.sum  main.go
udemy/MasterVectorDatabases/go-example-03/: go.mod  go.sum
udemy/MasterVectorDatabases/go-example-03/books/: books.go
udemy/MasterVectorDatabases/go-example-03/collections/: manager.go
udemy/MasterVectorDatabases/go-example-03/images/: images.go
udemy/MasterVectorDatabases/go-example-03/main/: main.go
udemy/MasterVectorDatabases/go-example-04/: go.mod  go.sum  main.go
udemy/MasterVectorDatabases/python/: CounterVectorizer.ipynb  FAISS.ipynb  LanchainExample.ipynb  MilvuzCollectionsExample.ipynb  Pinecone.ipynb  Pinecone2.ipynb  Pinecone3.ipynb  Regeneron.ipynb  Regeneron.py  Regeneron01.ipynb  Regeneron02.ipynb  SQLite_VSS.ipynb  TheMatrix.ipynb  VD_Qdrant_database.ipynb  azurecv.py  msal-1.26.0.tar  openai-1.7.2.tar  pbr-6.0.0.tar  retry-0.9.2.tar  sqlite_vss.py  state_union.sqlite3  tsla_news.txt
udemy/MasterVectorDatabases/python/msal-1.26.0/: setup.cfg
udemy/MasterVectorDatabases/python/msal-1.26.0/msal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
udemy/NoCodeML/: .gitignore
udemy/Ollama/: README.md  chromadb-ingress.yaml  mymodelfile.txt  open-webui-ingress.yaml  open-webui-ollama-ingress.yaml  open-webui-ollama-pcv.yaml  test.py  values.yaml
udemy/SageMakerPracticalCourse/: .gitignore  README.md
udemy/SageMakerPracticalCourse/medical_insurance/: medical_insurance_prediction_notebook.ipynb
(+20 files in other folders)
